Fix overflow and chart in small viewport

--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,7 @@
 
 body {
   font-family: "Montserrat", sans-serif ;
+  overflow-x: hidden;
 }
 
 .container {
@@ -184,9 +185,6 @@ body {
   padding: 0.5rem 1rem;
 }
 
-.blog .blog-item {
-  margin: 0 auto !important;
-}
 
 .footer {
   margin-top: 3rem;
@@ -246,4 +244,10 @@ body {
     margin: 1.5rem auto 2rem auto;
   }
 
+}
+
+@media (max-width: 560px){
+  .chart {
+    display: none;
+  }
 }
